# ice-cream-social

./: .claudeignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  QUICK_TEST.sh  README.md  SESSIONS.md  config.example.yaml  config.yaml  endOfSession.md  feedTheScoops.md  freshSession.md  package-lock.json  package.json  playwright.config.ts  requirements.txt  start_dev.sh  start_dev_simple.sh  stop_dev.sh
.github/: pull_request_template.md
data/: ice_cream_social.db-shm
docs/: CHARACTER_PERFORMER.md  COLLABORATION_PROTOCOL.md  ECAPA_TDNN_PLAN.md  EVOLVE_ICS_TRACKER.md  EXCEPTION_PLAN.md  TIKTOK_CLIP_FEED_TRACKER.md  VOICE_LIBRARY.md
logs/: dev.pids
scripts/: .env.example  api_episodes.py  categorize_episodes.py  check_status.py  config.py  content_analyzer.py  dashboard_monitor.py  dashboard_server.py  database.py  download_episodes.py  episode_metadata.json  export_to_hosted.py  extract_speaker_clips.py  extract_voice_sample.py  fix_database_issues.py  harvest_voice_samples.py  health_check.py  init_database.py  install-hooks.sh  pre-commit  process_transcript.py  pull_wiki_data.py  quick_status.sh  (+16 more)
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: content.rs  diagnostics.rs  episodes.rs  extraction.rs  mod.rs  queue.rs  settings.rs  speakers.rs  stats.rs  wiki.rs  worker.rs
src-tauri/src/database/: mod.rs  models.rs  tests.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/worker/: diarize.rs  download.rs  mod.rs  subagents.rs  transcribe.rs
(+612 files in other folders)
