[package]
name = "ice-cream-social"
version = "1.0.0"
description = "Podcast transcription and analysis for Ice Cream Social"
authors = ["Ryan"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ice_cream_social_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full", "process", "sync"] }
tokio-util = "0.7"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob", "functions", "trace"] }

# HTTP client for downloads and RSS
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# RSS parsing
feed-rs = "2.0"

# Configuration
serde_yaml = "0.9"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info for memory monitoring
sysinfo = "0.31"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex for parsing
regex = "1.10"

# Directory paths
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
